# ai-hedge-fund-crypto

./: .dockerignore  .env.example  Dockerfile  config.yaml  docker-compose.yml  main.py  pyproject.toml
src/agent/: agent.py  workflow.py
src/backtest/: backtester.py
src/gateway/: __init__.py  base_exchange_client.py  binance_exchange_client.py  bybit_exchange_client.py  exchange_factory.py
src/graph/: __init__.py  data_node.py  execution_node.py
src/risk/: __init__.py  circuit_breaker.py
src/strategies/: rsi_strategy.py
src/utils/: __init__.py  base_data_provider.py  binance_data_provider.py  bybit_data_provider.py  constants.py  data_provider_factory.py  settings.py  util_func.py
tests/: conftest.py
tests/unit/: test_circuit_breaker.py  test_data_providers.py  test_exchange_clients.py  test_execution_node.py
